directly load image cropper from cdn

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module">
+      import { defineCustomElements } from 'https://cdn.jsdelivr.net/npm/image-cropper-component/dist/esm/loader.js';
+      defineCustomElements();
+    </script>
   </body>
 
 </html>
